--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <h1 id="title">freeCodeCamp Survey Form</h1>
-        <p id="description">Thankyou for taking the time to help us improve the platform</p>
+        <p id="description"> <i>Thankyou for taking the time to help us improve the platform</i></p>
     </div>
     
 
