--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           <div><input type="checkbox" name="" id=""/> Data visualization</div>
           <div><input type="checkbox" name="" id=""/> Challenges</div>
           <div><input type="checkbox" name="" id=""/> Open Source Community</div>
-          <div></div><input type="checkbox" name="" id=""/> Gitter help rooms
-          <div></div><input type="checkbox" name="" id=""/> Videos
+          <div><input type="checkbox" name="" id=""/> Gitter help rooms</div>
+          <div><input type="checkbox" name="" id=""/> Videos</div>
           <div><input type="checkbox" name="" id=""/> City Meetups</div>
           <div><input type="checkbox" name="" id=""/> Wiki</div>
           <div><input type="checkbox" name="" id=""/> Forum</div>
