--- a/Login/index.html
+++ b/Login/index.html
@@ -13,7 +13,7 @@
         <input type="checkbox" id="flip">
         <div class="cover">
             <div class="front">
-                <img src="/Photos/business.jpg" alt="">
+                <img src="Photos/business.jpg" alt="">
 
                 <!-- <div class="text">
                     <span class="text-1">Welcome Enterprenuers!!</span>
@@ -38,7 +38,7 @@
                         <i class="fas fa-lock"></i>
                         <input type="password" name="text" id="" placeholder="Enter your Password" required>
                     </div>
-                    <div class="text"><a href="#">Forget Password</a></div>
+                    <div class="text"><a href="#">Forget Password?</a></div>
                     <div class="button input-box">
                         <input type="submit" value="Submit">
                     </div>
