--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -17,7 +17,7 @@
     <div id="header">
        <div class="container">
         <nav>
-            <img src="/images/Khushi.png" alt="" class="logo">
+            <img src="images/Khushi.png" alt="" class="logo">
             <ul>
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
