--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                 <img src="/images/Rectangle 4.png" alt="">
+                 <img src="images/Rectangle 4.png" alt="">
                 </div>
                 <div class="about-col-2">
                   <h1 class="about-header">About Me</h1>
@@ -118,7 +118,7 @@
             <h1 class="about-header">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="/images/work-1.png" alt="">
+                    <img src="images/work-1.png" alt="">
                     <div class="layer">
                         <h3>Ecommerce Website</h3>
                         <p>The website helps the people by providing the platform to buy and sell their products from home</p>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="/images/work-2.png" alt="">
+                    <img src="images/work-2.png" alt="">
                     <div class="layer">
                         <h3>PHP Address storing portal</h3>
                         <p>The portal which is mainly to perform the CRUD operation on the information collect from the department</p>
@@ -134,7 +134,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="/images/work-3.png" alt="">
+                    <img src="images/work-3.png" alt="">
                     <div class="layer">
                         <h3>Color Detection</h3>
                         <p>This detection mini project helps to detect the colors on the images which is used in the field of sensors</p>
@@ -162,7 +162,7 @@
                         <a href="https://www.linkedin.com/in/khushi-agarwal-ab1609202/"><i class="fab fa-linkedin"></i></a>
                         <a href="https://join.skype.com/invite/qCGCeBgQjA6z"><i class="fab fa-skype"></i></a>
                     </div>
-                    <a href="/images/Khushi_Agarwal_8006151511.pdf" download class=" btn btn2">Download CV</a>
+                    <a href="images/Khushi_Agarwal_8006151511.pdf" download class=" btn btn2">Download CV</a>
                 </div>
                 
                 <div class="contact-right">
