--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -168,12 +168,13 @@
                 </div>
                 
                 <div class="contact-right">
-                   <form>
-                        <input type="text" name="name" placeholder="Enter your name" required>
-                        <input type="email" name="email" placeholder="Enter your email" required>
-                        <textarea name="message" rows="6" placeholder="Your message"></textarea>
+                   <form name="submit-to-google-sheet">
+                        <input type="text" name="Name" placeholder="Enter your name" required>
+                        <input type="email" name="Email" placeholder="Enter your email" required>
+                        <textarea name="Message" rows="6" placeholder="Your message"></textarea>
                         <button type="Submit" class="btn btn2">Submit</button>
                    </form>
+                   <span id="msg"></span>
                 </div>
             </div>
            
