--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -55,8 +55,8 @@
                 </div>
                 <div class="about-col-2">
                   <h1 class="about-header">About Me</h1>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quis ab quae aut, esse aspernatur! Ut iure excepturi exercitationem accusamus! 
-                    Impedit fugit quae, praesentium odio error fuga molestias ea cum.</p>
+                  <p>I'm an enthuastic keen learner who is passionate towards coding and looking for an
+                    opportunities to showcase my skills in software development industry .</p>
 
                     <div class="tab-titles">
                         <p class="title-link active-link" onclick="opentab('skills')">Skills</p>
@@ -74,9 +74,10 @@
 
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>I2E-Frontend Developer</span><br>Currently, working as Frontend Developer at I2E</li>
+                            <li><span>I2E-Frontend Developer</span><br>Currently, working as a team leader in Frontend Development department at I2E</li>
                             <li><span>Genisup pvt ltd- Database Summer trainee</span><br>Internship at cooperative company and worked for five months</li>
-                            <li><span>Genisup pvt ltd- Data science- OpenCV library </span><br>Summer Internship at Genisup pvt ltd, and explpored the data science field</li>
+                            <li><span>Genisup pvt ltd- Data science- OpenCV library </span><br>Summer Internship at Genisup pvt ltd, and explored the data science field</li>
+                            <li><span>Aerial delievery research development and establishment (ADRDE) , DRDO</span><br>Summer Internship at ADRDE, as R&D intern worked with PHP and MYSQL</li>
                         </ul>
                     </div>
 
