--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -35,7 +35,9 @@
             <div class="header-text">
                 <p>UI/UX Designer</p>
                 <h1><span>Heya! I'm</span></h1>
-                <h1 class="text-effect">KHUSHI <br> AGARWAL</h1>
+                <div class="sec-text">
+                    
+                </div>
                 <p class="text-line">I help companies make beautiful websites</p>
             </div>
            </div> 
