--- a/order-summary-component-main/order-summary-component-main/index.html
+++ b/order-summary-component-main/order-summary-component-main/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <img class="background" src="C:\Users\Khushi\OneDrive\Desktop\webdev\web development challenges\order-summary-component-main\order-summary-component-main\pattern-background-desktop.svg" alt="image">
+    <img class="background" src="images/pattern-background-mobile.svg" alt="image">
      <main>
        <img class="illustration-image"src="images/illustration-hero.svg" alt="">
        <h1 class="order">Order Summary</h1>
