--- a/Cute-hubb-website-main/index.html
+++ b/Cute-hubb-website-main/index.html
@@ -21,17 +21,17 @@
     <main>
         <section>
             <h2>Categories</h2>
-             <video src="/extra/cat.mp4" width="20%" controls poster="/extra/cat.jpg"></video>
-             <video src="/extra/dog1 (2).mp4"width="20%"controls poster="/extra/cat.jpg"></video>
-             <video src="/extra/dog1 (1).mp4"width="20%"controls poster="/extra/dog.jpg"></video>
-             <video src="/extra/dog1 (4).mp4"width="20%"controls poster="/extra/dog.jpg"></video>  
+             <video src="./extra/cat.mp4" width="20%" controls poster="/extra/cat.jpg"></video>
+             <video src="./extra/dog1 (2).mp4"width="20%"controls poster="/extra/cat.jpg"></video>
+             <video src="./extra/dog1 (1).mp4"width="20%"controls poster="/extra/dog.jpg"></video>
+             <video src="./extra/dog1 (4).mp4"width="20%"controls poster="/extra/dog.jpg"></video>  
              <br>
              <br>
              <br>
-             <video src="/extra/dog1 (4).mp4"width="20%"controls poster="/extra/dog.jpg"></video>
-             <video src="/extra/dog1 (4).mp4"width="20%"controls poster="/extra/dog.jpg"></video>
-             <video src="/extra/dog1 (4).mp4"width="20%"controls poster="/extra/dog.jpg"></video>
-             <video src="/extra/dog1 (4).mp4"width="20%"controls poster="/extra/dog.jpg"></video>
+             <video src="./extra/dog1 (4).mp4"width="20%"controls poster="/extra/dog.jpg"></video>
+             <video src="./extra/dog1 (4).mp4"width="20%"controls poster="/extra/dog.jpg"></video>
+             <video src="./extra/dog1 (4).mp4"width="20%"controls poster="/extra/dog.jpg"></video>
+             <video src="./extra/dog1 (4).mp4"width="20%"controls poster="/extra/dog.jpg"></video>
         </section>
 
         <section>
