--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khushi's Portfolio</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,8 +21,8 @@
        <div class="container">
         <div class="ptext">
             <nav>
-                <img src="images/Khushi.png" alt="" class="logo">
-                <ul id="sidemenu">
+                <img src="images/Khushi.png" alt="" class="logo" data-aos="fade-left">
+                <ul id="sidemenu" data-aos="slide-up">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
@@ -44,28 +45,28 @@
     </div>
 <!-- ----------------------about---------------------------- -->
 
-    <div id="about">
+    <div id="about" >
         <div class="about-img">
             
         </div>
         <div class="container">
             <div class="row">
-                <div class="about-col-1">
+                <div class="about-col-1" data-aos="fade-left">
                  <img src="images/Rectangle 4.png" alt="">
                 </div>
-                <div class="about-col-2">
+                <div class="about-col-2"data-aos="fade-right">
                   <h1 class="about-header">About Me</h1>
                   <p>I'm an enthuastic keen learner who is passionate towards coding and looking for an
                     opportunities to showcase my skills in software development industry .</p>
 
-                    <div class="tab-titles">
+                    <div class="tab-titles" >
                         <p class="title-link active-link" onclick="opentab('skills')">Skills</p>
                         <p class="title-link" onclick="opentab('experience')">Experience</p>
                         <p class="title-link" onclick="opentab('education')">Education</p>
                     </div>
 
                     <div class="tab-contents active-tab" id="skills">
-                        <ul>
+                        <ul >
                             <li><span>UI/UX Designer</span><br>Designing Web Interfaces using figma</li>
                             <li><span>Web Developement</span><br>Developing Web Applications </li>
                             <li><span>PHP Developer</span><br>Developement with PHP technology</li>
@@ -101,7 +102,7 @@
         <div class="container">
             <h1 class="about-header">My Services</h1>
             <div class="services-list">
-                <div>
+                <div data-aos="slide-up"data-aos-duration="1000" data-aos-offset="100">
                     <i class="fas fa-code"></i>
                     <h2>Web Design</h2>
                     <p>Developement with the help of most popular languages like HTML for structure building,
@@ -110,7 +111,7 @@
                     </p>
                     <!-- <a href="#">Learn more</a> -->
                 </div>
-                <div>
+                <div data-aos="slide-up"data-aos-duration="1400"  data-aos-offset="100">
                     <i class="fas fa-crop-alt"></i>
                     <h2>UI Design</h2>
                     <p>Designing for the web pages using the design tool called figma which is most trending 
@@ -119,7 +120,7 @@
                     </p>
                     <!-- <a href="#">Learn more</a> -->
                 </div>
-                <div>
+                <div data-aos="slide-up"data-aos-duration="1800"  data-aos-offset="100">
                     <i class="fab fa-app-store"></i>
                     <h2>PHP Developer</h2>
                     <p>Developement with the help of PHP as still alot of applications use PHP for backend
@@ -141,7 +142,7 @@
         <div class="container">
             <h1 class="about-header">My Work</h1>
             <div class="work-list">
-                <div class="work">
+                <div class="work" data-aos="slide-right" >
                     <img src="images/work-1.png" alt="">
                     <div class="layer">
                         <h3>Ecommerce Website</h3>
@@ -149,7 +150,7 @@
                         <a href="https://khushi-2002.github.io/Ecommerce-site/index.html" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
-                <div class="work">
+                <div class="work" data-aos="slide-up" >
                     <img src="images/work-2.png" alt="">
                     <div class="layer">
                         <h3>PHP Address storing portal</h3>
@@ -157,7 +158,7 @@
                         <a href="#"><i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
-                <div class="work">
+                <div class="work" data-aos="slide-left">
                     <img src="images/work-3.png" alt="">
                     <div class="layer">
                         <h3>Color Detection</h3>
@@ -176,7 +177,7 @@
     <div id="contact">
         <div class="container">
             <div class="row">
-                <div class="contact-left">
+                <div class="contact-left" data-aos="fade-right">
                     <h1 class="about-header">Contact Me</h1>
                     <p> <i class="fas fa-paper-plane"></i> khushiagarwal915@gmail.com</p>
                     <p> <i class="fas fa-phone-square-alt"></i> +91 8006151511</p>
@@ -189,7 +190,7 @@
                     <a href="images/Khushi_Agarwal_8006151511.pdf" download class=" btn btn2">Download CV</a>
                 </div>
                 
-                <div class="contact-right">
+                <div class="contact-right" data-aos="fade-in" data-aos-duration="1200">
                    <form name="submit-to-google-sheet">
                         <input type="text" name="Name" placeholder="Enter your name" required>
                         <input type="email" name="Email" placeholder="Enter your email" required>
@@ -214,6 +215,16 @@
         backSpeed: 100 ,
         loop: true
     })
+</script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  AOS.init(
+    {
+        offset: 200,
+        duration:1000
+    }
+  )
+  ;
 </script>
 </body>
 </html>
